@@ -117,11 +117,6 @@
     offset));</programlisting></entry>
                     </row>
 
-                    <row><entry><varname>encoding</varname></entry>
-                    <entry> The character encoding that should be used for this file
-                    (only works if at the top of file). 
-                    See <xref linkend="encodings"/>. </entry></row>
-
                     <row>
                         <entry><varname>folding</varname></entry>
 
@@ -197,6 +192,16 @@
                 </tbody>
             </tgroup>
         </informaltable>
+
+        <para> You may see <literal>:encoding=XXX:</literal> in a file
+        as it is a buffer-local property and specifying the character encoding
+        for the file. But it is not really a buffer-local property, and behaves
+        differently.
+        It is detected by <literal>buffer-local-properties</literal> detector
+        only if the detector is selected in encoding options. Thus, it works
+        only at loading, and it must appear near the top of the file.
+        See <xref linkend="encodings"/>. </para>
+
     </section>
 
     <section id="global-opts">
